@@ -21,7 +21,7 @@ position.
    (if (and (memq 'note-head-interface ifs)
 	(memq sp '(-2 -3 -5)))
     (begin
-     (ly:grob-set-callback! gr 'stencil Text_interface::print)
+     (ly:grob-set-property! gr 'stencil Text_interface::print)
      (ly:grob-set-property! gr 'font-family 'roman)
      (ly:grob-set-property!
       gr 'text
